--- a/includes/f_header.html
+++ b/includes/f_header.html
@@ -1,90 +1,84 @@
 <?php 
-	/*
-	 * header.html
-	 * This page begins the HTML header for the site.
-	 */
-	
-	ob_start();
-	session_start();
-	
-	// Check for a $page_title value:
-	if (!isset($page_title))
-	{
-		$page_title = 'digoro';
-	}
+    /*
+     * header.html
+     * This page begins the HTML header for the site.
+     */
+    
+    // Check for a $page_title value:
+    if(!isset($page_title)) {
+        $page_title = 'digoro';
+    }
 ?>
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
-	xmlns:fb="https://www.facebook.com/2008/fbml">
-	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# playdigoro: http://ogp.me/ns/fb/playdigoro#">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>OG Tutorial App</title>
-		<meta name="author" content="Frank" />
-  		<meta property="fb:app_id" content="413593075351071" /> 
-  		<meta property="og:type"   content="playdigoro:recipe" /> 
-  		<meta property="og:url"    content="http://www.digoro.com/player/player_home.php" /> 
- 		<meta property="og:title"  content="Sample Recipe" /> 
- 		<meta property="og:image"  content="https://s-static.ak.fbcdn.net/images/devsite/attachment_blank.png" /> 
+    xmlns:fb="https://www.facebook.com/2008/fbml">
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# playdigoro: http://ogp.me/ns/fb/playdigoro#">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>OG Tutorial App</title>
+        <meta name="author" content="Frank" />
+          <meta property="fb:app_id" content="413593075351071" /> 
+          <meta property="og:type"   content="playdigoro:recipe" /> 
+          <meta property="og:url"    content="http://www.digoro.com/player/player_home.php" /> 
+         <meta property="og:title"  content="Sample Recipe" /> 
+         <meta property="og:image"  content="https://s-static.ak.fbcdn.net/images/devsite/attachment_blank.png" /> 
 
 
-		<!-- CSS Style Sheet -->
+        <!-- CSS Style Sheet -->
 
-		<!-- External javascript call -->
-		<script type="text/javascript">
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-32896382-1']);
-		  _gaq.push(['_trackPageview']);
-		
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-		</script>
-		
-	  <script type="text/javascript">
-	  function postCook()
-	  {
-	      FB.api(
-	        '/me/playdigoro:cook',
-	        'post',
-	        { recipe: 'http://www.digoro.com/player/player_home.php' },
-	        function(response) {
-	           if (!response || response.error) {
-	              alert('Error occured');
-	           } else {
-	              alert('Cook was successful! Action ID: ' + response.id);
-	           }
-	        });
-	  }
-	  </script>	
-	</head>
-	<body>
+        <!-- External javascript call -->
+        <script type="text/javascript">
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-32896382-1']);
+          _gaq.push(['_trackPageview']);
+        
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+        </script>
+        
+      <script type="text/javascript">
+      function postCook()
+      {
+          FB.api(
+            '/me/playdigoro:cook',
+            'post',
+            { recipe: 'http://www.digoro.com/player/player_home.php' },
+            function(response) {
+               if (!response || response.error) {
+                  alert('Error occured');
+               } else {
+                  alert('Cook was successful! Action ID: ' + response.id);
+               }
+            });
+      }
+      </script>    
+    </head>
+    <body>
 
 <div id="fb-root"></div>
-	  <script>
-	    window.fbAsyncInit = function() {
-	      FB.init({
-	        appId      : '413593075351071', // App ID
-	        status     : true, // check login status
-	        cookie     : true, // enable cookies to allow the server to access the session
-	        xfbml      : true  // parse XFBML
-	      });
-	    };
-	
-	    // Load the SDK Asynchronously
-	    (function(d){
-	      var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
-	      js = d.createElement('script'); js.id = id; js.async = true;
-	      js.src = "//connect.facebook.net/en_US/all.js";
-	      d.getElementsByTagName('head')[0].appendChild(js);
-	    }(document));
-	  </script>
-	
-	  <fb:login-button show-faces="true" width="200" max-rows="1" scope="publish_actions">
-	  </fb:login-button>
-	
-	<!-- End of Header -->
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            appId      : '413593075351071', // App ID
+            status     : true, // check login status
+            cookie     : true, // enable cookies to allow the server to access the session
+            xfbml      : true  // parse XFBML
+          });
+        };
+    
+        // Load the SDK Asynchronously
+        (function(d){
+          var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
+          js = d.createElement('script'); js.id = id; js.async = true;
+          js.src = "//connect.facebook.net/en_US/all.js";
+          d.getElementsByTagName('head')[0].appendChild(js);
+        }(document));
+      </script>
+    
+      <fb:login-button show-faces="true" width="200" max-rows="1" scope="publish_actions">
+      </fb:login-button>
+    
+    <!-- End of Header -->
 
